--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-confirm-alert": "^3.0.6",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.4.2",
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
